# IQL

./: HqlMain.cpp  HqlMain.hpp  INSTALL  Makefile  Makefile.globals  Makefile.in  NOTES  README  aclocal.m4  configure  configure.ac  driver.cpp  lexer.ll  parser.yy  runtests.sh  str.c  str.h  teststr.c
postgres/: Makefile  vim
postgres/include/parser/: gram.h
rasdaman/1hqlparser/: Makefile  rqlkeywords.c
rasdaman/rasql/: rqlkwlookup.c
rasdaman/rasql/include/: rqlkeywords.h  rqlkwlist.h
src/: HqlMain.cpp  HqlMain.hpp  HqlTable.cpp  HqlTable.hpp  IqlApp.cpp  IqlApp.hpp  Makefile  Makefile.am  Makefile.in  config.hpp  driver.cpp  logger.cpp  logger.hpp  logging.hpp
src/datasources/: DataSourceInterface.cpp  DataSourceInterface.hpp  HqlTable.cpp  HqlTable.hpp  IqlTable.cpp  IqlTable.hpp  Makefile  Makefile.am  Makefile.in  PostgresDS.cpp  PostgresDS.hpp  RasdamanDS.cpp  RasdamanDS.hpp  test.cpp  test2.cpp
src/grammar/: Makefile  Makefile.am  Makefile.in  lexer.ll  parser.yy  str.c  structures.hpp
src/postgres/: Makefile  Makefile.am  Makefile.in  keywords.cpp
src/postgres/include/: pg_config.h
src/postgres/include/parser/: keywords.h
src/querytree/: Makefile  Makefile.am  Makefile.in  QtBinaryOperation.cpp  QtBinaryOperation.hpp  QtCartesianProduct.cpp  QtCartesianProduct.hpp  QtColumn.cpp  QtColumn.hpp  QtCondenseArray.cpp  QtCondenseArray.hpp  QtConst.cpp  QtConst.hpp  QtCreateArray.cpp  QtCreateArray.hpp  QtDataSource.cpp  QtDataSource.hpp  QtDataSourceRef.cpp  QtDataSourceRef.hpp  QtDot.cpp  QtDot.hpp  QtEncodeArray.cpp  QtEncodeArray.hpp  QtInducedOperation.cpp  QtInducedOperation.hpp  QtJoin.cpp  QtJoin.hpp  QtList.cpp  QtList.hpp  QtNode.cpp  QtNode.hpp  QtPaginate.cpp  QtPaginate.hpp  QtPostGisFunction.cpp  QtPostGisFunction.hpp  QtRasqlFunction.cpp  QtRasqlFunction.hpp  QtRasqlInterval.cpp  QtRasqlInterval.hpp  QtReference.cpp  (+27 more)
src/rasdaman/: Makefile  Makefile.am  Makefile.in  rqlkeywords.c  rqlkeywords.cpp  rqlkwlookup.cpp
src/utils/: HqlTable.cpp  HqlTable.hpp  Makefile  logger.cpp  logger.hpp
tests/: gis-001.hql  gis-002.hql  hql-001.hql  hql-002a.hql  hql-002b.hql  hql-003a.hql  hql-003b.hql  hql-004a.hql  hql-004b.hql  hql-005a.hql  hql-005b.hql  hql-006a.hql  hql-006b.hql  hql-007a.hql  hql-007b.hql  hql-008a.hql  hql-008b.hql  hql-009.hql  hql-011.hql  hql-012a.hql  hql-012b.hql  hql-013.hql  hql-014.hql  hql-015.hql  hql-016.hql  hql-017.hql  hql-018.hql  hql-019.hql  hql-021.hql  hql-022.hql  hql-023.hql  hql-024.hql  hql-025.hql  hql-026.hql  hql-027.hql  hql-028.hql  hql-029.hql  hql-031.hql.fail  hql-032.hql.fail  hql-033.hql.fail  (+87 more)
