noinst_LIBRARIES = libquerytree.a
libquerytree_a_SOURCES = \
		QtCartesianProduct.cpp  QtEncodeArray.cpp       QtRasqlFunction.cpp    QtSqlFunction.cpp	\
		QtPostGisFunction.cpp	QtInducedOperation.cpp  QtString.cpp			\
		QtCreateArray.cpp       QtJoin.cpp              QtSelectStatement.cpp  		\
		QtDataSource.cpp        QtList.cpp              QueryTree.cpp		\
		QtNode.cpp              QtColumn.cpp 		\
		QtDot.cpp               QtPaginate.cpp          QtSort.cpp            
AM_CXXFLAGS = -w -I.. -I@RASDAMAN@/include
