noinst_LIBRARIES = libquerytree.a
libquerytree_a_SOURCES = \
		QtCartesianProduct.cpp  QtEncodeArray.cpp       QtRasqlFunction.cpp    QtSqlFunction.cpp	\
		QtPostGisFunction.cpp	QtInducedOperation.cpp  QtString.cpp		QtRasqlInterval.cpp	\
		QtCreateArray.cpp       QtJoin.cpp              QtSelectStatement.cpp	QtTrimOperation.cpp	\
		QtDataSource.cpp        QtList.cpp              QueryTree.cpp		QtConst.cpp		\
		QtNode.cpp              QtColumn.cpp 		QtBinaryOperation.cpp	\
		QtDot.cpp               QtPaginate.cpp          QtSort.cpp            
AM_CXXFLAGS = -w -I.. -I@RASDAMAN@/include
