noinst_LIBRARIES = libquerytree.a
libquerytree_a_SOURCES = \
	QtBinaryOperation.cpp  QtJoin.cpp             QtRasqlInterval.cpp    QtWhere.cpp	\
	QtColumn.cpp           QtList.cpp             QtSelectStatement.cpp  QueryTree.cpp	\
	QtConst.cpp            QtNode.cpp             QtSqlFunction.cpp		\
	QtDataSource.cpp       QtPostGisFunction.cpp  QtString.cpp		\
	QtEncodeArray.cpp      QtRasqlFunction.cpp    QtTrimOperation.cpp

AM_CXXFLAGS = -w -I.. -I@RASDAMAN@/include
